@@ -1,7 +1,22 @@
-language: ruby
+sudo: required
+dist: trusty
 rvm:
-  - 2.3.0
+  - 2.2.5
+  - 2.3.1
+cache: bundler
 before_script:
+  - export CHROME_BIN=/usr/bin/google-chrome
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
-script: rake features:watir_webdriver
+  - sudo apt-get update
+  - sudo apt-get install -y libappindicator1 fonts-liberation
+  - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+  - sudo dpkg -i google-chrome*.deb
+  - CHROMEDRIVER_VERSION=$(curl -s http://chromedriver.storage.googleapis.com/LATEST_RELEASE)
+  - curl -L -O "http://chromedriver.storage.googleapis.com/${CHROMEDRIVER_VERSION}/chromedriver_linux64.zip"
+  - unzip chromedriver_linux64.zip
+  - chmod +x chromedriver
+  - sudo mv chromedriver /usr/local/bin
+script: bundle exec rake $RAKE_TASK
+env:
+  - RAKE_TASK=features:watir_webdriver
