@@ -3,6 +3,7 @@
   * Added array methods to section collections
   * Added ability to call style method with no parameters
   * clean up frame and iframe nesting
+  * Update travis.yml
 === 2017-01-25
 * Enhancements
   * Added list_items method to UnorderedList to get an array of children.
